[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "crypto"
version = "0.1.0"
description = ""
authors = ["Adithya Balaji <adithyabsk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tqdm = "^4.62.3"
cryptography = "^36.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^21.11b1"
isort = "^5.10.1"
flake8 = "^4.0.1"
flake8-bugbear = "^21.9.2"
pytest = "^6.2.5"

# Tooling configuration

[tool.isort]
profile = "black"
multi_line_output = 3
